# router/sys/sys_permission.go
@@ -1,0 +1,19 @@
+package sys
+
+import (
+	"go-gin-rest-api/api/v1/sys"
+	"go-gin-rest-api/middleware"
+
+	jwt "github.com/appleboy/gin-jwt/v2"
+	"github.com/gin-gonic/gin"
+)
+
+// 用户权限
+func InitPermission(r *gin.RouterGroup, authMiddleware *jwt.GinJWTMiddleware) (R gin.IRoutes) {
+	router := r.Group("permission").Use(authMiddleware.MiddlewareFunc()).Use(middleware.CasbinMiddleware)
+	{
+		router.GET("/get/:casbin_subject", sys.GetPermission)
+		router.POST("/auth/:user", sys.AuthPermission)
+	}
+	return router
+}
